fixing overflow

--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
-html {
+body, html {
     font-family: 'Roboto Mono', monospace;
     font-size:16px;
     min-width:100vw;
     max-width:100vw;
     min-height: 100vw;
     max-height: 100vw;
+    margin:0;
+    padding:0;
+    overflow:hidden;
 }
 #container {
     text-align: center;
